[gd_scene load_steps=12 format=3 uid="uid://b22nw60juoc6k"]

[ext_resource type="Script" path="res://Scenes and Scripts/Diagram/line.gd" id="1_4fl17"]
[ext_resource type="Shader" path="res://Resources/Shaders/particle_line.gdshader" id="1_x0i6p"]
[ext_resource type="Texture2D" uid="uid://b8glr5vnlacpl" path="res://Textures/ParticlesAndLines/gluon_end.png" id="3_6ete1"]
[ext_resource type="Texture2D" uid="uid://c1joju14fxw1n" path="res://Textures/ParticlesAndLines/Particle.png" id="4_wgcwh"]
[ext_resource type="Shader" path="res://Scenes and Scripts/Diagram/outline_palette_swap.gdshader" id="5_2gn0a"]
[ext_resource type="Texture2D" uid="uid://dya0nescxtd67" path="res://Textures/ParticlesAndLines/arrow.png" id="5_chfwe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3ebw7"]
resource_local_to_scene = true
shader = ExtResource("1_x0i6p")
shader_parameter/start_interaction_strength_alpha = 1.0
shader_parameter/end_interaction_strength_alpha = 1.0
shader_parameter/line_color = Color(0, 0, 0, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vwugj"]
shader = ExtResource("5_2gn0a")
shader_parameter/line_color = Color(0, 0, 0, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g5clp"]
resource_local_to_scene = true
shader = ExtResource("5_2gn0a")
shader_parameter/line_color = Color(0, 0, 0, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_00w2k"]
shader = ExtResource("5_2gn0a")
shader_parameter/line_color = Color(0, 0, 0, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cuptf"]
resource_local_to_scene = true
size = Vector2(8, 8)

[node name="particle" type="Node2D" groups=["lines"]]
material = SubResource("ShaderMaterial_3ebw7")
script = ExtResource("1_4fl17")
gluon_loop_length = 9
text_gap = 14.0

[node name="line_joint_start" type="Line2D" parent="."]
use_parent_material = true
points = PackedVector2Array(0, 0, 2.08165e-12, 2.08165e-12)
width = 20.0
texture = ExtResource("3_6ete1")
texture_mode = 1
antialiased = true

[node name="line_joint_end" type="Line2D" parent="."]
use_parent_material = true
points = PackedVector2Array(0, 0, 0, 0)
width = 18.0
texture = ExtResource("3_6ete1")
texture_mode = 1
antialiased = true

[node name="line_middle" type="Line2D" parent="."]
texture_repeat = 2
use_parent_material = true
points = PackedVector2Array(0, 0, 95.1324, -2.08165e-12)
width = 12.0
texture = ExtResource("4_wgcwh")
texture_mode = 1
antialiased = true

[node name="arrow" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_vwugj")
position = Vector2(52, 2.08165e-12)
texture = ExtResource("5_chfwe")
offset = Vector2(-4, 0)

[node name="text" type="Sprite2D" parent="."]
visible = false
z_index = 1
material = SubResource("ShaderMaterial_g5clp")
scale = Vector2(1.5, 1.5)

[node name="spareText" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_00w2k")
scale = Vector2(1.5, 1.5)

[node name="clickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="clickArea"]
shape = SubResource("RectangleShape2D_cuptf")

[connection signal="mouse_entered" from="clickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="clickArea" to="." method="_on_click_area_mouse_exited"]
